fixed vue import to include compiler+runtime fixed vue initialization wrapped app contents in another div layer added scroll indicator

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -13,6 +13,24 @@ h1, h2, h3, h4, h5, h6 {
 /* header */
 #header {
   font-family: 'Cabin', sans-serif;
+  .scrollIndicator {
+    background-color: rgba(255,255,255,.25);
+    box-sizing: border-box;
+    height: .1875rem;
+    left: 0;
+    position: absolute;
+    top: 0;
+    &::after {
+      background-color: rgba(46,213,115,.5);
+      bottom: 0;
+      content: "";
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: .25rem;
+    }
+  }
   .navSocial {
     .nav-item {
       filter: saturate(.45);
